--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navLogo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 64px; /* Adjust the height to fit your logo */
+  background-color: #001529; /* Background color for the logo area */
+}
+
+.navLogo img {
+  max-height: 52px;
+  object-fit: contain;
+  border-radius: 10px; /* Control how the image fits within the container */
+}
