--- a/src/index.css
+++ b/src/index.css
@@ -17,11 +17,122 @@ code {
   align-items: center;
   justify-content: center;
   height: 64px; /* Adjust the height to fit your logo */
-  background-color: #001529; /* Background color for the logo area */
+  /* background-color: #001529;  */
+}
+
+.main-logo {
+  width: 100%;
+  height: auto;
 }
 
 .navLogo img {
-  max-height: 52px;
+  max-height: 40px;
   object-fit: contain;
   border-radius: 10px; /* Control how the image fits within the container */
+}
+
+.landing-page {
+  object-fit: contain;
+  border-radius: 10px;
+}
+
+.landing-page {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+
+.background-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.logo {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 100px;
+  height: auto;
+  border-radius: 5px;
+}
+
+.sign-in-button {
+  position: absolute;
+  top: 20px;
+  right: 40px;
+}
+
+.home-content-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 80%;
+  max-width: 600px;
+  padding: 20px;
+  /* background-color: rgba(255, 255, 255, 0.7); */
+  border-radius: 10px;
+}
+
+.home-content {
+  margin-top: 20px;
+}
+
+/* .home-content h1 {
+  font-size: 24px;
+  color: #333;
+}
+
+.home-content p {
+  font-size: 18px;
+  color: #666;
+} */
+
+
+/* body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+/* video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}*/
+
+/* .content {
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  color: #ffffff;
+  font-size: 24px;
+  padding: 20px;
+}  */
+.title_box{
+  margin-top: 26%;
+}
+.title{
+  font-size: 85px;
+  font-weight:bolder;
+  color: white;
+}
+.i_color{
+  color: gold;
+  font-size: 85px;
+  font-weight:bolder;
+}
+.tag_line{
+  font-weight: bolder;
+  font-style: italic;
+  color: white;
 }
