--- a/src/index.css
+++ b/src/index.css
@@ -118,10 +118,10 @@ code {
   font-size: 24px;
   padding: 20px;
 }  */
-.title_box{
+/* .title_box{
   margin-top: 26%;
-}
-.title{
+} */
+/* .title{
   font-size: 85px;
   font-weight:bolder;
   color: white;
@@ -130,9 +130,51 @@ code {
   color: gold;
   font-size: 85px;
   font-weight:bolder;
-}
+} */
 .tag_line{
   font-weight: bolder;
   font-style: italic;
   color: white;
+}
+.btn-add-device{
+  width: 100%;
+  height: 66px;
+  /* border-color: #aba7b9 !important; */
+}
+
+.device-name{
+  font-weight: bolder;
+}
+
+.device-id{
+  color: gray;
+}
+.device-msg{
+  color: gray;
+  margin: 20px 0px;
+  text-align: justify;
+}
+
+.device-box{
+  border: 1px solid #f0f0f0;
+  border-radius: 5px;
+}
+
+
+
+.device-hover-card:hover {
+  background-color: #f0f0f0; /* Change the background color on hover */
+  transition: background-color 0.3s; /* Add a smooth transition effect */
+}
+
+.device-active-card {
+  border: 1px solid #1890ff; /* Add a border with a blue color */
+  /* background-color: #f0f0f0;  */
+  transition: border 0.3s, background-color 0.3s; /* Add a smooth transition effect */
+}
+.device-card .ant-card-body{
+  padding: 10px !important;
+}
+.section-break{
+  margin-top: 50px;
 }
