--- a/src/index.css
+++ b/src/index.css
@@ -151,6 +151,7 @@ code {
 .device-box{
   border: 1px solid #f0f0f0;
   border-radius: 5px;
+  background:#f5f5f5;
 }
 
 
@@ -169,4 +170,56 @@ code {
 
 .user-detail-item{
   margin-bottom: 10px;
+}
+
+.sensor-data-card {
+  /* width: 280px; */
+  margin-bottom: 20px;
+  height: 150px;
+  /* background: rgb(17, 4, 134); */
+  border-radius: 15px;
+  /* box-shadow: rgb(0,0,0,0.7) 5px 10px 50px ,rgb(0,0,0,0.7) -5px 0px 250px; */
+  display: flex;
+  color: white;
+  justify-content: center;
+  position: relative;
+  flex-direction: column;
+  /* background: linear-gradient(to right, #001529, rgb(36, 59, 85)); */
+  background: linear-gradient(to right, #024786, #0c5bca);
+  /* cursor: pointer; */
+  transition: all 0.3s ease-in-out;
+  overflow: hidden;
+}
+
+
+.sensor-data-card .sensor-text {
+  font-size: 50px;
+  margin-top: 0px;
+  margin-left: 15px;
+  margin-bottom: 0px;
+  font-weight: 600;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+
+.sensor-data-card .sensor-sub-text {
+  font-size: 15px;
+  margin-left: 5px;
+}
+
+.sensor-data-card .sensor-item-text {
+  font-size: 18px;
+  margin-top: 0px;
+  margin-left: 15px;
+  font-weight: 500;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.sensor-data-card .sensor {
+  font-size: 20px;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  transition: all 0.3s ease-in-out;
 }
