Implement user dashboard features

--- a/src/index.css
+++ b/src/index.css
@@ -171,3 +171,11 @@ code {
 .user-detail-item{
   margin-bottom: 10px;
 }
+
+/*spinner*/
+.spinner{
+  display: flex;
+  justify-content: center;
+ align-items: center;
+  min-height: 300px
+}
