--- a/src/index.css
+++ b/src/index.css
@@ -173,9 +173,16 @@ code {
 }
 
 /*spinner*/
-.spinner{
+.loading-spinner-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Dark tint */
   display: flex;
   justify-content: center;
- align-items: center;
-  min-height: 300px
+  align-items: center;
+  z-index: 9999; /* Ensure it overlays everything */
 }
+
