--- a/src/index.css
+++ b/src/index.css
@@ -193,6 +193,12 @@ code {
   border-radius: 8px;
 }
 
+.admin-map-container {
+  height: 600px;
+  margin-top: 15px;
+  border-radius: 8px;
+}
+
 /*User stats*/
 .stats-card{
   margin-top: 15px;
